Feature/update dependencies (#7)
* update dependencies

* update material ui

* change color picker

* update nivo

* support neo4j 5.x

* update to neo4j 5.1.0-community

* fix image name for lokal build
